# evalops-workbench

./: README.md  index.html  package.json  pyproject.toml
api/: _telemetry_static.json  stats.py
docs/: architecture.md  roadmap.md
frontend/: next.config.mjs
frontend/src/lib/: project.ts
src/evalops_workbench/: __init__.py  catalog.py  cli.py  project.json
tests/: test_cli.py
