[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evalops-workbench"
version = "0.1.0"
description = "A local-first evaluation harness for prompts, tools, and agents with regression tracking and experiment history."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ignazio De Santis" }
]
dependencies = []

[project.scripts]
evalops-workbench = "evalops_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evalops_workbench = ["project.json"]
